<resources>
    <string name="app_name">MADE Submission</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorite">Favorite</string>
    <string name="cannot_load_content">Oops.. Cannot load content</string>
    <string name="title_favorite">Favorite</string>
    <string name="module_not_found">Module not found…</string>
    <string name="information">Information</string>
    <string name="details">Details</string>
    <string name="delete_from_favorite">Delete %s from Favorite?</string>
    <string name="_86">86</string>
    <string name="fantastic_beasts">Fantastic Beasts</string>
    <string name="_100_000">100.000</string>
    <string name="action_adventure_drama_comedy">Action,Adventure,Drama,Comedy</string>
    <string name="_100">100</string>
    <string name="november_21_2020">November 21, 2020</string>
    <string name="language_settings">Language Settings</string>
</resources>